# portfolio

./: .gitignore  README.md
1. (DS and ML) - World Cup Catar 2022/: .gitignore  README.md  world_cup_2022_catar.csv  worldcup_eda.ipynb
1. (DS and ML) - World Cup Catar 2022/datasets/: df_events_list.csv  df_players_goals.csv  statistic_per_team.csv  top_assists.csv  top_scores.csv
1. (DS and ML) - World Cup Catar 2022/results/: comparison_models.csv
1. (Data Science/ML) World Cup Catar 2022/: worldcup_eda.ipynb
2. (Computer Vision) - Vehicle License Plate Detection/: .gitignore  README.md  final_class.py  plate_detection.py  plate_detection_notebook.ipynb  requirements.txt
2. (Computer Vision) - Vehicle License Plate Detection/helper/: yolov5_crop_images.ipynb
2. (Computer Vision) - Vehicle License Plate Detection/results/: easy_results.csv  keras_results.csv  opencv_results.csv  pytesseract_results.csv  results.csv  simple_results.csv
3. (DS and ML) - Rentals Regression and Classification/: dataZap_final.csv  dataZap_normalized.csv  project.ipynb
3. (DS and ML) - Rentals Regression and Classification/Parallel Project/: project.ipynb
3. (DS and ML) - Rentals Regression and Classification/webscraping-datasets/: dataZap_ba_aluguel_casas_TODOS_3.csv  dataZap_ce_aluguel_casas_TODOS_3.csv  dataZap_es_aluguel_casas_TODOS_3.csv  (+12 more)
4. (LLM) - RAG/: README.md  requirements.txt
AI Agents/Nutrition Consultant/: agents.py  inputs.py  main.ipynb  main.py  pyproject.toml  tasks.py
AI Agents/Nutrition Consultant/outputs/: caiobarros_planner.md
(+9 files in other folders)
